bk_ida/gobmkida/c3/owl_threaten_attack
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/owl_threaten_attack/src/engine/owl.c:2229:37: error: use of undeclared identifier 'byte_9C689F'
for ( i = 22LL; ( unsigned __int8)( byte_9C689F[i] - 1) > 1u || goal->goal[i - 1] != 1; i += 2LL ) 
                                    ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/owl_threaten_attack/src/engine/owl.c:2259:37: error: use of undeclared identifier 'byte_9C689F'
for ( j = 22LL; ( unsigned __int8)( byte_9C689F[j] - 1) > 1u || goal->goal[j - 1] != 1; j += 2LL ) 
                                    ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/owl_threaten_attack/src/engine/owl.c:2312:37: error: use of undeclared identifier 'byte_9C689F'
for ( k = 22LL; ( unsigned __int8)( byte_9C689F[k] - 1) > 1u || goal->goal[k - 1] != 1; k += 2LL ) 
                                    ^
3 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/owl_threaten_attack/src/obj/1/owl.o] Error 1
